--- a/CustomRPC/MainForm.ru.resx
+++ b/CustomRPC/MainForm.ru.resx
@@ -124,9 +124,6 @@
     <value>Приложение остаётся запущенным</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 54</value>
-  </data>
   <data name="trayMenuReconnect.Size" type="System.Drawing.Size, System.Drawing">
     <value>182, 22</value>
   </data>
@@ -142,11 +139,11 @@
   <data name="trayMenuQuit.Text" xml:space="preserve">
     <value>Выйти</value>
   </data>
-  <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>48, 20</value>
+  <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>183, 54</value>
   </data>
-  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>Файл</value>
+  <data name="trayMenuStrip.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="uploadAssetsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>205, 22</value>
@@ -163,11 +160,11 @@
   <data name="quitToolStripMenuItem.Text" xml:space="preserve">
     <value>Выход</value>
   </data>
-  <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>79, 20</value>
+  <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>48, 20</value>
   </data>
-  <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Настройки</value>
+  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
+    <value>Файл</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>193, 22</value>
@@ -181,11 +178,41 @@
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
     <value>Запускать свёрнутым</value>
   </data>
+  <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>79, 20</value>
+  </data>
+  <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
+    <value>Настройки</value>
+  </data>
   <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 20</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>О программе...</value>
+  </data>
+  <data name="menuStrip.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBoxID.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBoxDetails.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBoxState.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBoxSmallKey.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBoxSmallText.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBoxLargeKey.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBoxLargeText.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="buttonUpdatePresence.Text" xml:space="preserve">
     <value>Обновить статус</value>
@@ -227,16 +254,16 @@
     <value>Вторая строка в статусе.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>Название ассета большого маленького изображения.</value>
+    <value>Название ассета маленького изображения.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
     <value>Текст, отображаемый при наведении на маленькое изображение.</value>
   </data>
   <data name="labelLargeText.ToolTip" xml:space="preserve">
-    <value>Текст, отображаемый при наведении на маленькое изображение.</value>
+    <value>Текст, отображаемый при наведении на большое изображение.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>Название ассета большого большого изображения.</value>
+    <value>Название ассета большого изображения.</value>
   </data>
   <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
     <value>150, 14</value>
@@ -286,5 +313,11 @@
   <data name="labelTimestamp.ToolTip" xml:space="preserve">
     <value>Настраивает время для статуса, показываемое под всем текстом, указанным выше.
 У времени в статусе есть 24-часовой лимит, то есть при достижении 24 часов время сбрасывается до 0:00.</value>
+  </data>
+  <data name="panelTimestamps.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="$this.ToolTip" xml:space="preserve">
+    <value />
   </data>
 </root>
