--- a/CustomRPC/MainForm.ru.resx
+++ b/CustomRPC/MainForm.ru.resx
@@ -190,6 +190,12 @@
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>О программе...</value>
   </data>
+  <data name="updateAvailableToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>133, 20</value>
+  </data>
+  <data name="updateAvailableToolStripMenuItem.Text" xml:space="preserve">
+    <value>Скачать обновление</value>
+  </data>
   <data name="menuStrip.ToolTip" xml:space="preserve">
     <value />
   </data>
