--- a/CustomRPC/UpdatePrompt.ru.resx
+++ b/CustomRPC/UpdatePrompt.ru.resx
@@ -117,17 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>Error</value>
+  <data name="buttonYes.Text" xml:space="preserve">
+    <value>Да</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>No ID specified!</value>
+  <data name="buttonNo.Text" xml:space="preserve">
+    <value>Нет</value>
   </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>First Time Run</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
+    <value>214, 14</value>
   </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>Would you like to open a manual?
-You can open it any time by going Help -&gt; Open the Manual or pressing F1.</value>
+  <data name="labelQuestion.Text" xml:space="preserve">
+    <value>Вы хотите скачать это обновление?</value>
+  </data>
+  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>262, 18</value>
+  </data>
+  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
+    <value>Не проверять обновления в дальнейшем</value>
+  </data>
+  <data name="labelVersionsText.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Tahoma, 12pt</value>
+  </data>
+  <data name="labelVersionsText.Text" xml:space="preserve">
+    <value>Текущая версия:
+Последняя версия:</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Доступно обновление</value>
   </data>
 </root>
