--- a/CustomRPC/UpdatePrompt.resx
+++ b/CustomRPC/UpdatePrompt.resx
@@ -118,228 +118,231 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="labelVersionsText.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleLeft</value>
+  <data name="buttonUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>247, 126</value>
   </data>
-  <data name="&gt;&gt;pictureBoxLogo.ZOrder" xml:space="preserve">
+  <data name="buttonUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="buttonUpdate.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
+  </data>
+  <data name="buttonUpdate.Text" xml:space="preserve">
+    <value>Update</value>
+  </data>
+  <data name="&gt;&gt;buttonUpdate.Name" xml:space="preserve">
+    <value>buttonUpdate</value>
+  </data>
+  <data name="&gt;&gt;buttonUpdate.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;buttonUpdate.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;buttonUpdate.ZOrder" xml:space="preserve">
+    <value>7</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pictureBoxLogo.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="pictureBoxLogo.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 12</value>
+  </data>
+  <data name="pictureBoxLogo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>50, 50</value>
+  </data>
+  <data name="pictureBoxLogo.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
+    <value>Zoom</value>
+  </data>
+  <data name="pictureBoxLogo.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="&gt;&gt;pictureBoxLogo.Name" xml:space="preserve">
+    <value>pictureBoxLogo</value>
   </data>
   <data name="&gt;&gt;pictureBoxLogo.Type" xml:space="preserve">
     <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="labelVersions.Location" type="System.Drawing.Point, System.Drawing">
-    <value>209, 12</value>
-  </data>
-  <data name="&gt;&gt;checkBoxNeverNotify.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="buttonNo.TabIndex" type="System.Int32, mscorlib">
-    <value>4</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pictureBoxLogo.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
-    <value>Zoom</value>
-  </data>
-  <data name="labelVersions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="&gt;&gt;labelQuestion.Name" xml:space="preserve">
-    <value>labelQuestion</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>UpdatePrompt</value>
-  </data>
-  <data name="labelQuestion.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;labelVersionsText.Name" xml:space="preserve">
-    <value>labelVersionsText</value>
-  </data>
-  <data name="&gt;&gt;labelVersions.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
   <data name="&gt;&gt;pictureBoxLogo.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="checkBoxNeverNotify.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="&gt;&gt;pictureBoxLogo.ZOrder" xml:space="preserve">
+    <value>6</value>
   </data>
-  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 18</value>
-  </data>
-  <data name="labelVersionsText.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="buttonNotNow.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="labelVersions.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 14.25pt</value>
+  <data name="buttonNotNow.Location" type="System.Drawing.Point, System.Drawing">
+    <value>166, 126</value>
   </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 14</value>
+  <data name="buttonNotNow.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
   </data>
-  <data name="labelVersionsText.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 14.25pt</value>
+  <data name="buttonNotNow.TabIndex" type="System.Int32, mscorlib">
+    <value>4</value>
   </data>
-  <data name="&gt;&gt;buttonYes.Type" xml:space="preserve">
+  <data name="buttonNotNow.Text" xml:space="preserve">
+    <value>Not Now</value>
+  </data>
+  <data name="&gt;&gt;buttonNotNow.Name" xml:space="preserve">
+    <value>buttonNotNow</value>
+  </data>
+  <data name="&gt;&gt;buttonNotNow.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="checkBoxNeverNotify.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
+  <data name="&gt;&gt;buttonNotNow.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
-  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
-    <value>CenterParent</value>
+  <data name="&gt;&gt;buttonNotNow.ZOrder" xml:space="preserve">
+    <value>5</value>
+  </data>
+  <data name="labelQuestion.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="labelQuestion.Location" type="System.Drawing.Point, System.Drawing">
+    <value>9, 76</value>
   </data>
   <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
     <value>232, 14</value>
   </data>
+  <data name="labelQuestion.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="labelQuestion.Text" xml:space="preserve">
+    <value>Would you like to download this update?</value>
+  </data>
+  <data name="&gt;&gt;labelQuestion.Name" xml:space="preserve">
+    <value>labelQuestion</value>
+  </data>
   <data name="&gt;&gt;labelQuestion.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="pictureBoxLogo.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="&gt;&gt;labelQuestion.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;labelQuestion.ZOrder" xml:space="preserve">
+    <value>4</value>
+  </data>
+  <data name="checkBoxNeverNotify.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="checkBoxNeverNotify.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 102</value>
+  </data>
+  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>191, 18</value>
+  </data>
+  <data name="checkBoxNeverNotify.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
+  </data>
+  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
+    <value>Don't check for updates again</value>
+  </data>
+  <data name="&gt;&gt;checkBoxNeverNotify.Name" xml:space="preserve">
+    <value>checkBoxNeverNotify</value>
+  </data>
+  <data name="&gt;&gt;checkBoxNeverNotify.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;checkBoxNeverNotify.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;checkBoxNeverNotify.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="labelVersionsText.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Tahoma, 14.25pt</value>
+  </data>
+  <data name="labelVersionsText.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="buttonYes.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+  <data name="labelVersionsText.Location" type="System.Drawing.Point, System.Drawing">
+    <value>68, 12</value>
+  </data>
+  <data name="labelVersionsText.Size" type="System.Drawing.Size, System.Drawing">
+    <value>185, 50</value>
+  </data>
+  <data name="labelVersionsText.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>Current version:
 Latest version:</value>
   </data>
-  <data name="&gt;&gt;buttonNo.Name" xml:space="preserve">
-    <value>buttonNo</value>
+  <data name="labelVersionsText.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleLeft</value>
   </data>
-  <data name="buttonYes.Text" xml:space="preserve">
-    <value>Yes</value>
-  </data>
-  <data name="&gt;&gt;labelVersionsText.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;buttonNo.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Would you like to download this update?</value>
-  </data>
-  <data name="&gt;&gt;pictureBoxLogo.Name" xml:space="preserve">
-    <value>pictureBoxLogo</value>
-  </data>
-  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 9pt</value>
-  </data>
-  <data name="labelVersionsText.Location" type="System.Drawing.Point, System.Drawing">
-    <value>68, 12</value>
-  </data>
-  <data name="&gt;&gt;buttonYes.ZOrder" xml:space="preserve">
-    <value>6</value>
+  <data name="&gt;&gt;labelVersionsText.Name" xml:space="preserve">
+    <value>labelVersionsText</value>
   </data>
   <data name="&gt;&gt;labelVersionsText.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="labelVersionsText.Size" type="System.Drawing.Size, System.Drawing">
-    <value>150, 50</value>
+  <data name="&gt;&gt;labelVersionsText.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
-  <data name="labelVersions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 50</value>
+  <data name="&gt;&gt;labelVersionsText.ZOrder" xml:space="preserve">
+    <value>2</value>
   </data>
-  <data name="&gt;&gt;labelVersions.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="labelVersions.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Tahoma, 14.25pt</value>
   </data>
-  <data name="buttonYes.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
-  </data>
-  <data name="&gt;&gt;labelVersions.Name" xml:space="preserve">
-    <value>labelVersions</value>
-  </data>
-  <data name="buttonNo.Text" xml:space="preserve">
-    <value>No</value>
-  </data>
-  <data name="labelQuestion.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 76</value>
-  </data>
-  <data name="buttonNo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>197, 126</value>
-  </data>
-  <data name="labelVersionsText.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="buttonNo.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="labelVersions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="&gt;&gt;checkBoxNeverNotify.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="labelVersions.Location" type="System.Drawing.Point, System.Drawing">
+    <value>247, 12</value>
+  </data>
+  <data name="labelVersions.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 50</value>
+  </data>
+  <data name="labelVersions.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
   </data>
   <data name="labelVersions.Text" xml:space="preserve">
     <value>1.0.0
 9.9.9</value>
   </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="labelQuestion.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Update Available</value>
-  </data>
-  <data name="checkBoxNeverNotify.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 102</value>
-  </data>
   <data name="labelVersions.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
   </data>
+  <data name="&gt;&gt;labelVersions.Name" xml:space="preserve">
+    <value>labelVersions</value>
+  </data>
+  <data name="&gt;&gt;labelVersions.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;labelVersions.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
   <data name="&gt;&gt;labelVersions.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
-  <data name="&gt;&gt;labelQuestion.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="buttonSkipUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 126</value>
   </data>
-  <data name="&gt;&gt;checkBoxNeverNotify.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>107, 23</value>
   </data>
-  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Don't check for updates again</value>
-  </data>
-  <data name="&gt;&gt;labelQuestion.ZOrder" xml:space="preserve">
+  <data name="buttonSkipUpdate.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
-  <data name="buttonYes.Location" type="System.Drawing.Point, System.Drawing">
-    <value>116, 126</value>
+  <data name="buttonSkipUpdate.Text" xml:space="preserve">
+    <value>Skip This Version</value>
   </data>
-  <data name="&gt;&gt;labelVersionsText.ZOrder" xml:space="preserve">
-    <value>1</value>
+  <data name="&gt;&gt;buttonSkipUpdate.Name" xml:space="preserve">
+    <value>buttonSkipUpdate</value>
   </data>
-  <data name="&gt;&gt;buttonNo.Parent" xml:space="preserve">
+  <data name="&gt;&gt;buttonSkipUpdate.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;buttonSkipUpdate.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="labelVersions.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;buttonYes.Name" xml:space="preserve">
-    <value>buttonYes</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>284, 161</value>
-  </data>
-  <data name="pictureBoxLogo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>50, 50</value>
-  </data>
-  <data name="&gt;&gt;buttonNo.ZOrder" xml:space="preserve">
-    <value>4</value>
-  </data>
-  <data name="&gt;&gt;buttonYes.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="buttonNo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="pictureBoxLogo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 12</value>
-  </data>
-  <data name="pictureBoxLogo.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;checkBoxNeverNotify.Name" xml:space="preserve">
-    <value>checkBoxNeverNotify</value>
+  <data name="&gt;&gt;buttonSkipUpdate.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -347,4 +350,25 @@ Latest version:</value>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>7, 14</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>334, 161</value>
+  </data>
+  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Tahoma, 9pt</value>
+  </data>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterParent</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Update Available</value>
+  </data>
+  <data name="&gt;&gt;$this.Name" xml:space="preserve">
+    <value>UpdatePrompt</value>
+  </data>
+  <data name="&gt;&gt;$this.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
