German translation (thanks to Ypsol), list of translators, minor fixes

--- a/CustomRPC/Strings.ru.resx
+++ b/CustomRPC/Strings.ru.resx
@@ -130,4 +130,7 @@
     <value>Хотите ли вы открыть руководство?
 Его можно открыть в любое время, открыв меню Помощь -&gt; Открыть руководство, или нажав кнопку F1.</value>
   </data>
+  <data name="information" xml:space="preserve">
+    <value>Информация</value>
+  </data>
 </root>
