--- a/CustomRPC/MainForm.de.resx
+++ b/CustomRPC/MainForm.de.resx
@@ -118,257 +118,220 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="trayIcon.BalloonTipText" xml:space="preserve">
-    <value>Дважды кликните на иконку, чтобы открыть приложение, или нажмите ПКМ и выберите "Выйти"</value>
+    <value>Klicke zweimal auf das Icon, um es nochmal anzuzeigen, oder Rechtsklick zum Beenden.</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
-    <value>Приложение остаётся запущенным</value>
+    <value>Das Programm wird in der Taskleiste laufen.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 54</value>
+  </data>
   <data name="trayMenuReconnect.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="trayMenuReconnect.Text" xml:space="preserve">
-    <value>Переподключиться</value>
+    <value>Neu verbinden</value>
   </data>
   <data name="toolStripSeparatorTray1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>179, 6</value>
+    <value>149, 6</value>
   </data>
   <data name="trayMenuQuit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="trayMenuQuit.Text" xml:space="preserve">
-    <value>Выйти</value>
-  </data>
-  <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 54</value>
-  </data>
-  <data name="trayMenuStrip.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="uploadAssetsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>247, 22</value>
-  </data>
-  <data name="uploadAssetsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Загрузить изображения</value>
-  </data>
-  <data name="toolStripSeparatorFile1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>244, 6</value>
-  </data>
-  <data name="quitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>247, 22</value>
-  </data>
-  <data name="quitToolStripMenuItem.Text" xml:space="preserve">
-    <value>Выход</value>
+    <value>Beenden</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>48, 20</value>
+    <value>46, 20</value>
   </data>
   <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>Файл</value>
+    <value>Datei</value>
   </data>
-  <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>203, 22</value>
+  <data name="uploadAssetsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>208, 22</value>
   </data>
-  <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
-    <value>Запускать c Windows</value>
+  <data name="uploadAssetsToolStripMenuItem.Text" xml:space="preserve">
+    <value>Assets hochladen</value>
   </data>
-  <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>203, 22</value>
+  <data name="toolStripSeparatorFile1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>205, 6</value>
   </data>
-  <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
-    <value>Запускать свёрнутым</value>
+  <data name="quitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>208, 22</value>
   </data>
-  <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 6</value>
-  </data>
-  <data name="checkUpdatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>203, 22</value>
-  </data>
-  <data name="checkUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>Проверять обновления</value>
+  <data name="quitToolStripMenuItem.Text" xml:space="preserve">
+    <value>Beenden</value>
   </data>
   <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>79, 20</value>
+    <value>90, 20</value>
   </data>
   <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Настройки</value>
+    <value>Einstellungen</value>
   </data>
-  <data name="openTheManuakToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>212, 22</value>
+  <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>189, 22</value>
   </data>
-  <data name="openTheManuakToolStripMenuItem.Text" xml:space="preserve">
-    <value>Открыть руководство</value>
+  <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
+    <value>Beim Start öffnen</value>
   </data>
-  <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>212, 22</value>
+  <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>189, 22</value>
   </data>
-  <data name="gitHubPageToolStripMenuItem.Text" xml:space="preserve">
-    <value>Страница на GitHub</value>
+  <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
+    <value>Minimiert starten</value>
   </data>
-  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>209, 6</value>
+  <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 6</value>
   </data>
-  <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>212, 22</value>
+  <data name="checkUpdatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>189, 22</value>
   </data>
-  <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>О программе...</value>
-  </data>
-  <data name="toolStripSeparator3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>209, 6</value>
-  </data>
-  <data name="germanToolStripMenuItem.Text" xml:space="preserve">
-    <value>Немецкий:</value>
-  </data>
-  <data name="russianToolStripMenuItem.Text" xml:space="preserve">
-    <value>Русский:</value>
-  </data>
-  <data name="translatedByToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>212, 22</value>
-  </data>
-  <data name="translatedByToolStripMenuItem.Text" xml:space="preserve">
-    <value>Переводчики</value>
-  </data>
-  <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 20</value>
+  <data name="checkUpdatesToolStripMenuItem.Text" xml:space="preserve">
+    <value>Nach Updates suchen</value>
   </data>
   <data name="helpToolStripMenuItem.Text" xml:space="preserve">
-    <value>Помощь</value>
+    <value>Hilfe</value>
+  </data>
+  <data name="openTheManuakToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>197, 22</value>
+  </data>
+  <data name="openTheManuakToolStripMenuItem.Text" xml:space="preserve">
+    <value>Öffne die Anleitung</value>
+  </data>
+  <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>197, 22</value>
+  </data>
+  <data name="gitHubPageToolStripMenuItem.Text" xml:space="preserve">
+    <value>GitHub Seite</value>
+  </data>
+  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>194, 6</value>
+  </data>
+  <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>197, 22</value>
+  </data>
+  <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
+    <value>Über...</value>
+  </data>
+  <data name="toolStripSeparator3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>194, 6</value>
+  </data>
+  <data name="translatedByToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>197, 22</value>
+  </data>
+  <data name="translatedByToolStripMenuItem.Text" xml:space="preserve">
+    <value>Übersetzer</value>
+  </data>
+  <data name="germanToolStripMenuItem.Text" xml:space="preserve">
+    <value>Deutsch:</value>
+  </data>
+  <data name="russianToolStripMenuItem.Text" xml:space="preserve">
+    <value>Russisch:</value>
   </data>
   <data name="updateAvailableToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>133, 20</value>
+    <value>121, 20</value>
   </data>
   <data name="updateAvailableToolStripMenuItem.Text" xml:space="preserve">
-    <value>Скачать обновление</value>
+    <value>Update runterladen</value>
   </data>
-  <data name="menuStrip.ToolTip" xml:space="preserve">
-    <value />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="buttonUpdatePresence.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
-  <data name="textBoxID.ToolTip" xml:space="preserve">
-    <value />
+  <data name="buttonUpdatePresence.Location" type="System.Drawing.Point, System.Drawing">
+    <value>180, 317</value>
   </data>
-  <data name="textBoxDetails.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="textBoxState.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="textBoxSmallKey.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="textBoxSmallText.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="textBoxLargeKey.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="textBoxLargeText.ToolTip" xml:space="preserve">
-    <value />
+  <data name="buttonUpdatePresence.Size" type="System.Drawing.Size, System.Drawing">
+    <value>127, 24</value>
   </data>
   <data name="buttonUpdatePresence.Text" xml:space="preserve">
-    <value>Обновить статус</value>
+    <value>Aktualisiere Präsenz</value>
   </data>
   <data name="buttonUpdatePresence.ToolTip" xml:space="preserve">
-    <value>Обновляет статус.</value>
-  </data>
-  <data name="buttonConnect.Location" type="System.Drawing.Point, System.Drawing">
-    <value>227, 49</value>
-  </data>
-  <data name="buttonConnect.Size" type="System.Drawing.Size, System.Drawing">
-    <value>87, 24</value>
+    <value>Aktualisiert die Präsenz.</value>
   </data>
   <data name="buttonConnect.Text" xml:space="preserve">
-    <value>Подключить</value>
+    <value>Verbinden</value>
   </data>
   <data name="buttonConnect.ToolTip" xml:space="preserve">
-    <value>Связывает приложение с указанными ID и статусом.</value>
-  </data>
-  <data name="buttonDisconnect.Location" type="System.Drawing.Point, System.Drawing">
-    <value>327, 49</value>
-  </data>
-  <data name="buttonDisconnect.Size" type="System.Drawing.Size, System.Drawing">
-    <value>87, 24</value>
+    <value>Verbindet das Programm mit der verwendeten ID mit festgelegter Präsenz.</value>
   </data>
   <data name="buttonDisconnect.Text" xml:space="preserve">
-    <value>Отключить</value>
+    <value>Trennen</value>
   </data>
   <data name="buttonDisconnect.ToolTip" xml:space="preserve">
-    <value>Отключается от Discord. Может занять некоторое время.</value>
+    <value>Trennt das Programm von Discord. Dies kann eine Weile dauern.</value>
   </data>
   <data name="labelID.ToolTip" xml:space="preserve">
-    <value>ID приложения с сайта разработчиков Discord.</value>
+    <value>ID des Programms von der Discord Developers Seite.</value>
   </data>
   <data name="labelDetails.ToolTip" xml:space="preserve">
-    <value>Первая строка в статусе.</value>
+    <value>Erste Zeile der Präsenz.</value>
   </data>
   <data name="labelState.ToolTip" xml:space="preserve">
-    <value>Вторая строка в статусе.</value>
+    <value>Zweite Zeile der Präsenz.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>Название ассета маленького изображения.</value>
+    <value>Name des Assets für das kleine Bild.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
-    <value>Текст, отображаемый при наведении на маленькое изображение.</value>
+    <value>Text, der angezeigt wird, wenn man die Maus über das kleine Bild bewegt.</value>
   </data>
   <data name="labelLargeText.ToolTip" xml:space="preserve">
-    <value>Текст, отображаемый при наведении на большое изображение.</value>
+    <value>Text, der angezeigt wird, wenn man die Maus über das große Bild bewegt.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>Название ассета большого изображения.</value>
+    <value>Name des Assets für das große Bild.</value>
   </data>
   <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
-    <value>150, 14</value>
+    <value>66, 14</value>
   </data>
   <data name="labelSmall.Text" xml:space="preserve">
-    <value>Маленькое изображение</value>
+    <value>Kleines Bild</value>
   </data>
   <data name="labelSmall.ToolTip" xml:space="preserve">
-    <value>Изображение, отображающееся в правом нижнем углу большого изображения.</value>
+    <value>Bild, das rechts unten vom großen Bild angezeigt wird.</value>
   </data>
   <data name="labelLarge.Size" type="System.Drawing.Size, System.Drawing">
-    <value>137, 14</value>
+    <value>67, 14</value>
   </data>
   <data name="labelLarge.Text" xml:space="preserve">
-    <value>Большое изображение</value>
+    <value>Großes Bild</value>
   </data>
   <data name="labelLarge.ToolTip" xml:space="preserve">
-    <value>Изображение, показываемое слева от установленного выше текста.</value>
+    <value>Bild, das links neben dem oben festgelegten Text angezeigt wird.</value>
   </data>
   <data name="radioButtonNone.Size" type="System.Drawing.Size, System.Drawing">
-    <value>46, 18</value>
+    <value>55, 18</value>
   </data>
   <data name="radioButtonNone.Text" xml:space="preserve">
-    <value>Нет</value>
+    <value>Keine</value>
   </data>
   <data name="radioButtonNone.ToolTip" xml:space="preserve">
-    <value>Отключить строку со временем.</value>
+    <value>Keine Zeitstempel aktiviert.</value>
   </data>
   <data name="radioButtonStartTime.Size" type="System.Drawing.Size, System.Drawing">
-    <value>194, 18</value>
+    <value>203, 18</value>
   </data>
   <data name="radioButtonStartTime.Text" xml:space="preserve">
-    <value>С момента запуска Custom RP</value>
+    <value>Seit Custom RP gestartet wurde</value>
   </data>
   <data name="radioButtonStartTime.ToolTip" xml:space="preserve">
-    <value>Показывает время со старта данной программы.</value>
+    <value>Zeigt die Zeit an, die seit dem Start des Programms vergangen ist.</value>
   </data>
   <data name="radioButtonLocalTime.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 18</value>
+    <value>115, 18</value>
   </data>
   <data name="radioButtonLocalTime.Text" xml:space="preserve">
-    <value>Время компьютера</value>
+    <value>Deine lokale Zeit
+</value>
   </data>
   <data name="radioButtonLocalTime.ToolTip" xml:space="preserve">
-    <value>Показывает текущее время на компьютере в 24-часовом формате.</value>
+    <value>Zeigt deine momentane Zeit im 24-Stunden Format an.</value>
   </data>
   <data name="labelTimestamp.ToolTip" xml:space="preserve">
-    <value>Настраивает время для статуса, показываемое под всем текстом, указанным выше.
-У времени в статусе есть 24-часовой лимит, то есть при достижении 24 часов время сбрасывается до 0:00.</value>
-  </data>
-  <data name="panelTimestamps.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="$this.ToolTip" xml:space="preserve">
-    <value />
+    <value>Setzt Zeitstempel für den Status, welcher unter dem obigen Text angezeigt wird. 
+Status Timer haben ein Limit von 24 Stunden. Das bedeutet, dass der Zeitstempel nach 24 Stunden auf 0:00 gesetzt wird.</value>
   </data>
 </root>
