--- a/CustomRPC/Strings.de.resx
+++ b/CustomRPC/Strings.de.resx
@@ -117,36 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="buttonUpdate.Text" xml:space="preserve">
-    <value>Да</value>
+  <data name="error" xml:space="preserve">
+    <value>Fehler</value>
   </data>
-  <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Не сейчас</value>
+  <data name="errorNoID" xml:space="preserve">
+    <value>Keine ID wurde festgelegt!</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>214, 14</value>
+  <data name="firstTimeRun" xml:space="preserve">
+    <value>Erster Start</value>
   </data>
-  <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Вы хотите скачать это обновление?</value>
+  <data name="firstTimeRunText" xml:space="preserve">
+    <value>Möchtest du die Anleitung öffnen?
+Du kannst es jederzeit unter Hilfe -&gt; Öffne das Handbuch oder mit der F1-Taste aufrufen.</value>
   </data>
-  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>262, 18</value>
-  </data>
-  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Не проверять обновления в дальнейшем</value>
-  </data>
-  <data name="labelVersionsText.Text" xml:space="preserve">
-    <value>Текущая версия:
-Последняя версия:</value>
-  </data>
-  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 23</value>
-  </data>
-  <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>Пропустить версию</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Доступно обновление</value>
+  <data name="information" xml:space="preserve">
+    <value>Information</value>
   </data>
 </root>
