--- a/CustomRPC/Strings.resx
+++ b/CustomRPC/Strings.resx
@@ -128,6 +128,9 @@
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
     <value>Would you like to open a manual?
-You can open it any time by going Help -&gt; Open the Manual or pressing F1.</value>
+You can open it any time by going to Help -&gt; Open the Manual or pressing F1.</value>
+  </data>
+  <data name="information" xml:space="preserve">
+    <value>Information</value>
   </data>
 </root>
