--- a/CustomRPC/Strings.de.resx
+++ b/CustomRPC/Strings.de.resx
@@ -120,6 +120,10 @@
   <data name="error" xml:space="preserve">
     <value>Fehler</value>
   </data>
+  <data name="errorCannotConnect" xml:space="preserve">
+    <value>Es kann keine Verbindung zum Discord-Client hergestellt werden.
+Bist du sicher, dass es läuft?</value>
+  </data>
   <data name="errorNoID" xml:space="preserve">
     <value>Keine ID wurde festgelegt!</value>
   </data>
