--- a/CustomRPC/Strings.resx
+++ b/CustomRPC/Strings.resx
@@ -120,6 +120,10 @@
   <data name="error" xml:space="preserve">
     <value>Error</value>
   </data>
+  <data name="errorCannotConnect" xml:space="preserve">
+    <value>Can't connect to Discord client.
+Are you sure it's running?</value>
+  </data>
   <data name="errorNoID" xml:space="preserve">
     <value>No ID specified!</value>
   </data>
