Party, verbal connection status, can only run one instance, oktokit update, bugfixes

--- a/CustomRPC/About.de.resx
+++ b/CustomRPC/About.de.resx
@@ -130,4 +130,7 @@
   <data name="buttonClose.Text" xml:space="preserve">
     <value>Schließen</value>
   </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Über...</value>
+  </data>
 </root>
